--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Hell's driver</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   
-</body>
+<!-- PANTALLA DE INICIO-->
+<div id="splash-screen" class="container">
+<button id="start-game-btn">Let's go Driver!</button>
+</div>
+
+<!--PANTALLA DE JUEGO-->
+<div id="game-screen" class = "container">
+  <!--aqui hay que añadir el score-->
+  <div id="score">Score: 0</div>
+<div id = "game-box">
+
+</div>
+</div>
+
+<!--PANTALLA FINAL-->
+<div id="game-over-screen" class="container"></div>
 </html>
