--- a/index.html
+++ b/index.html
@@ -10,18 +10,29 @@
   
 <!-- PANTALLA DE INICIO-->
 <div id="splash-screen" class="container">
-<button id="start-game-btn">Let's go Driver!</button>
+<img src="./img/Hell's-Driver.png" width="500" alt="hellDriverLogo">
+<br>
+<button id="start-game-btn">Let's go driver</button>
 </div>
 
 <!--PANTALLA DE JUEGO-->
 <div id="game-screen" class = "container">
   <!--aqui hay que añadir el score-->
-  <div id="score">Score: 0</div>
+  <div class="score">Score: 0</div>
 <div id = "game-box">
 
 </div>
 </div>
 
 <!--PANTALLA FINAL-->
-<div id="game-over-screen" class="container"></div>
+<div id="game-over-screen" class="container">
+
+<div class="score">Driver your final score was :0</div>
+
+
+<img src="./img/game over.png" width="500" alt="gameOver">
+</div>
+<script src = "script/main.js"></script>
+<script src = "script/maincar.js"></script>
+</body>
 </html>
