--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@
 </div>
 <script src = "script/main.js"></script>
 <script src = "script/maincar.js"></script>
+<script src = "script/enemyCar.js"></script>
 </body>
 </html>
