--- a/index.html
+++ b/index.html
@@ -35,5 +35,6 @@
 <script src = "script/main.js"></script>
 <script src = "script/maincar.js"></script>
 <script src = "script/enemyCar.js"></script>
+<script src="script/mainstreamers.js"></script>
 </body>
 </html>
