clase hippie implementada

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
 <!-- PANTALLA DE INICIO-->
 <div id="splash-screen" class="container">
-<img src="./img/Hell's-Driver.png" width="500" alt="hellDriverLogo">
+<img src="./img/HellDriverScreen.jpg" width="700" alt="hellDriverLogo">
 <br>
 <button id="start-game-btn">Let's go driver</button>
 </div>
@@ -36,5 +36,6 @@
 <script src = "script/maincar.js"></script>
 <script src = "script/enemyCar.js"></script>
 <script src="script/mainstreamers.js"></script>
+<script src="script/hippies.js"></script>
 </body>
 </html>
