se añade las instrucciones de juego

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hell's driver</title>
   <link rel="stylesheet" href="./style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
 </head>
 <body>
   
@@ -12,6 +15,19 @@
 <div id="splash-screen" class="container">
 <img src="./img/HellDriverScreen.jpg" width="700" alt="hellDriverLogo">
 <br>
+<div id="game-info">
+  <h2>Instrucciones</h2>
+  <p>¿Alguna vez has soñado con atropellar de manera colerica a todos esos imprudentes que prefieren cruzar la calle sin usar un paso de peatones? ESTE ES TU JUEGO.</p>
+</div>
+<div  id = "game-rules">
+  <h2>Reglas</h2>
+
+  <ul>
+    <li>Atropella a todos los peatones que deciden cruzar por mitad de la calle</li>
+    <li>Atrapa los boosters <img src="./img/powerUp.png" id="booster-img" alt="booster"> para aumentar tu velocidad pero ten cuidado con las cervezas🍺</li>
+    <li>Si te estrellas contra otro coche... MUERES☠️</li>
+  </ul>
+</div>
 <button id="start-game-btn">Let's go driver</button>
 </div>
 
