--- a/index.html
+++ b/index.html
@@ -1,57 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hell's driver</title>
-  <link rel="stylesheet" href="./style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
-</head>
-<body>
-  
-<!-- PANTALLA DE INICIO-->
-<div id="splash-screen" class="container">
-<img src="./img/HellDriverScreen.jpg" width="700" alt="hellDriverLogo">
-<br>
-<div id="game-info">
-  <h2>Instrucciones</h2>
-  <p>¿Alguna vez has soñado con atropellar de manera colerica a todos esos imprudentes que prefieren cruzar la calle sin usar un paso de peatones? ESTE ES TU JUEGO.</p>
-</div>
-<div  id = "game-rules">
-  <h2>Reglas</h2>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Hell's driver</title>
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <!-- PANTALLA DE INICIO-->
+    <div id="splash-screen" class="container">
+      <img src="./img/HellDriverScreen.jpg" width="700" alt="hellDriverLogo" />
+      <br />
+      <div id="game-info">
+        <h2>Instrucciones</h2>
+        <p>
+          ¿Alguna vez has soñado con atropellar de manera colerica a todos esos
+          imprudentes que prefieren cruzar la calle sin usar un paso de
+          peatones? ESTE ES TU JUEGO.
+        </p>
+      </div>
+      <div id="game-rules">
+        <h2>Reglas</h2>
 
-  <ul>
-    <li>Atropella a todos los peatones que deciden cruzar por mitad de la calle</li>
-    <li>Atrapa los boosters <img src="./img/powerUp.png" id="booster-img" alt="booster"> para aumentar tu velocidad pero ten cuidado con las cervezas🍺</li>
-    <li>Si te estrellas contra otro coche... MUERES☠️</li>
-  </ul>
-</div>
-<button id="start-game-btn">Let's go driver</button>
-</div>
+        <ul>
+          <li>
+            Atropella a todos los peatones que deciden cruzar por mitad de la
+            calle
+          </li>
+          <li>
+            Atrapa los boosters
+            <img src="./img/powerUp.png" id="booster-img" alt="booster" /> para
+            aumentar tu velocidad pero ten cuidado con las cervezas🍺
+          </li>
+          <li>Si te estrellas contra otro coche... MUERES☠️</li>
+        </ul>
+      </div>
+      <button id="start-game-btn">Let's go driver</button>
+    </div>
 
-<!--PANTALLA DE JUEGO-->
-<div id="game-screen" class = "container">
-  <!--aqui hay que añadir el score-->
-  <div class="score">Score: 0</div>
-<div id = "game-box">
+    <!--PANTALLA DE JUEGO-->
+    <div id="game-screen" class="container">
+      <!--aqui hay que añadir el score-->
+      <div class="score">Score: 0</div>
+      <div id="game-box"></div>
+    </div>
 
-</div>
-</div>
+    <!--PANTALLA FINAL-->
+    <div id="game-over-screen" class="container">
+      <img src="./img/game-over.gif" width="500" alt="gameOver" />
+      <br>
 
-<!--PANTALLA FINAL-->
-<div id="game-over-screen" class="container">
-
-<div class="score">Driver your final score was :0</div>
-
-
-<img src="./img/game over.png" width="500" alt="gameOver">
-</div>
-<script src = "script/main.js"></script>
-<script src = "script/maincar.js"></script>
-<script src = "script/enemyCar.js"></script>
-<script src="script/mainstreamers.js"></script>
-<script src="script/hippies.js"></script>
-</body>
+      <div id="final-score">Driver your final score was :0</div>
+    </div>
+    <script src="script/main.js"></script>
+    <script src="script/maincar.js"></script>
+    <script src="script/enemyCar.js"></script>
+    <script src="script/mainstreamers.js"></script>
+    <script src="script/hippies.js"></script>
+  </body>
 </html>
