se añade clase BeerBooster

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <!--PANTALLA DE JUEGO-->
     <div id="game-screen" class="container">
       <!--aqui hay que añadir el score-->
-      <div class="score">Score: 0</div>
+      <div id="score">Score: 0</div>
       <div id="game-box"></div>
     </div>
 
@@ -63,5 +63,6 @@
     <script src="script/enemyCar.js"></script>
     <script src="script/mainstreamers.js"></script>
     <script src="script/hippies.js"></script>
+    <script src="script/BeerBooster.js"></script>
   </body>
 </html>
