score actualizado y boton de restart

--- a/index.html
+++ b/index.html
@@ -31,12 +31,10 @@
         <ul>
           <li>
             Atropella a todos los peatones que deciden cruzar por mitad de la
-            calle
+            calle y acumula puntos
           </li>
           <li>
-            Atrapa los boosters
-            <img src="./img/powerUp.png" id="booster-img" alt="booster" /> para
-            aumentar tu velocidad pero ten cuidado con las cervezas🍺
+            Ten cuidado con las cervezas🍺, pueden afectar a tu forma de conducir
           </li>
           <li>Si te estrellas contra otro coche... MUERES☠️</li>
         </ul>
@@ -52,11 +50,15 @@
     </div>
 
     <!--PANTALLA FINAL-->
+   
     <div id="game-over-screen" class="container">
-      <img src="./img/game-over.gif" width="500" alt="gameOver" />
+      
+      <img src="./img/game-over.gif" width =500px alt="gameOver" id="gif-gameover"/>
+      
       <br />
 
-      <div id="final-score">Driver your final score was :0</div>
+      <div id="final-score">Conductor, tu puntuación final es :0</div>
+      <button id="restart-game-btn">Restart game!</button>
     </div>
     <script src="script/main.js"></script>
     <script src="script/maincar.js"></script>
