se añade estetica visual

--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
       <div id="game-info" class ="inicio">
         <h2>Instrucciones</h2>
         <p>
-          ¿Alguna vez has soñado con atropellar de manera colerica a todos esos
-          imprudentes que prefieren cruzar la calle sin usar un paso de
-          peatones? ESTE ES TU JUEGO.
+          Have you ever dreamed of angrily running over all those reckless people who prefer to cross the street without using a pedestrian crossing ? THIS IS YOUR GAME.
         </p>
       </div>
       <div id="game-rules"class ="inicio">
@@ -34,13 +32,12 @@
 
         <ul>
           <li>
-            Atropella a todos los peatones que deciden cruzar por mitad de la
-            calle y acumula puntos
+            Runs over all pedestrians who decide to cross the road and accumulate points
           </li>
           <li>
-            Ten cuidado con las cervezas🍺, pueden afectar a tu forma de conducir
+            Carefoul with the beers 🍺, can afect to your driver experience
           </li>
-          <li>Si te estrellas contra otro coche o contra el muro... MUERES☠️</li>
+          <li>If you crash into another car or the wall... YOU DIE☠️</li>
   
         </ul>
       </div>
